@@ -1,5 +1,7 @@
 #!/bin/bash
-
 javac MemEat.java
-java MemEat
+java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap MemEat
+#java MemEat
+./runShellCommands.sh
+java -version
 
